--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,10 @@ p {
   color: #fff;
 }
 
+.center-btn{
+  text-align:center;
+  margin: 20px 0;
+}
 
 
 /* =========================================================
