--- a/styles.css
+++ b/styles.css
@@ -278,3 +278,17 @@ footer{
   padding:8px;
   cursor:pointer;
 }
+/* ===============================
+   KHUSUS HALAMAN KARIR
+=============================== */
+.karir-page .card-image{
+  height:220px;        /* tinggi seragam */
+  overflow:hidden;
+}
+
+.karir-page .card-image img{
+  width:100%;
+  height:100%;
+  object-fit:cover;   /* rapi, boleh crop */
+  display:block;
+}
